copied over the howto/chefdk article as README.md